# Algorithm

./: CMakeLists.txt  README.md  Solution.cpp  Solution.h  main.cpp
LeetCode/: LeetCodeTasks.cpp  LeetCodeTasks.h
Yandex/: 5.0_3.cpp  5.0_3.h  6.0_1.cpp  6.0_1.h
Yandex/5_0/: 5.0_3.cpp  5.0_3.h
Yandex/6_0/: 6.0_1.cpp  6.0_1.h  6.0_2.cpp  6.0_2.h  6.0_3.cpp  6.0_3.h  D.txt  E.txt
include/: Solution.h
src/: Solution.cpp
