cmake_minimum_required(VERSION 3.29)
project(test_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(test_2
        main.cpp
        Yandex/5_0/5.0_3.cpp
        Yandex/5_0/5.0_3.h
        Yandex/5_0/5.0_3.cpp
        Yandex/6_0/6.0_1.h
        Yandex/6_0/6.0_1.cpp
        Yandex/6_0/6.0_2.h
        Yandex/6_0/6.0_2.cpp)
